--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -25,6 +25,9 @@
 
     li {
       padding-top: 7px;
+      a{
+        color: $black;
+      }
     }
   }
 }
@@ -158,7 +161,7 @@
       .wp-block-group {
         margin: 15px 0;
         p {
-          margin-bottom: 0;
+          // margin-bottom: 0;
         }
       }
       /* Unit Test Data Compatibility End */
@@ -897,6 +900,11 @@
         margin: 0;
         line-height: 30px;
         text-transform: capitalize;
+        a{
+          &:hover{
+            color: $primary-color;
+          }
+        }
       }
     }
   }
